# score_capture

./: .gitignore  README.md  build.py  fcitx5-qt.sh  main.sh  pyproject.toml
src/: config.py  config_default.ini  data.py  image_process.py  log.py  main.py  test.py  tools.py  utilities.py
src/ui/: locate.ui  locate_ui.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  preview.py  preview.ui  stitch.ui  stitch_ui.py
