[project]
name = "score-capture"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib==3.10.3",
    "nuitka>=2.7.5",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.0",
    "pywin32>=310",
    "scikit-image>=0.25.2",
]
