[project]
name = "score-capture"
version = "0.1.2"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.0",
    "scikit-image>=0.25.2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "nuitka>=2.7.5",
    "types-pywin32>=311.0.0.20250822",
]
